force-app/src/objects/TR1__Closing_Report__c.object
<CustomObject>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__AGP_Multiplier__c</fullName>
        <label>AGP Multiplier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Closing_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Billing_Street__c</fullName>
        <label>Additional Billing Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Compensation__c</fullName>
        <label>Additional Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Adjusted_Bill_Rate__c</fullName>
        <formula>TR1__Bill_Rate__c -  TR1__Consu_Administrative_Fee_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Adjusted_Fee_Amount__c</fullName>
        <formula>TR1__Fee_Amount__c -  TR1__Administrative_Fee_Amount__c -  TR1__Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Administrative_Fee_Amount__c</fullName>
        <formula>TR1__Fee_Amount__c *  TR1__Administrative_Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administrative Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Administrative_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Administrative Fee Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Assignment_Ended__c</fullName>
        <label>Assignment Ended</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Rate Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Attention__c</fullName>
        <label>Billing Attention</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Billing_Zip_Code__c</fullName>
        <label>Billing Zip Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Booking_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Date you will received credit for this close.</inlineHelpText>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Extra Duties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Burden_Multiplier__c</fullName>
        <label>Burden Multiplier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_GP_Amount__c</fullName>
        <formula>TR1__Adjusted_Fee_Amount__c *  TR1__Candidate_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Percentage__c</fullName>
        <label>Candidate Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Collection_Amount__c</fullName>
        <label>Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Collection_Date__c</fullName>
        <label>Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Consu_Administrative_Fee_Amount__c</fullName>
        <formula>TR1__Bill_Rate__c *  TR1__Administrative_Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Administrative Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Conversion_Date__c</fullName>
        <label>Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__DT_Bill_Rate_Multiplier_Percentage__c</fullName>
        <defaultValue>2.00</defaultValue>
        <label>DT Bill Rate Multiplier Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__DT_Bill_Rate__c</fullName>
        <formula>TR1__Adjusted_Bill_Rate__c *  TR1__DT_Bill_Rate_Multiplier_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Del_existing_CA_if_any_in_job_duration__c</fullName>
        <description>When &quot;Yes&quot; is selected, it will remove any existing candidate availabilities between job start &amp; End date either while creating CR or when Start/end date is modified on CR</description>
        <inlineHelpText>When &quot;Yes&quot; is selected, it will remove any existing candidate availabilities between job start &amp; End date either while creating CR or when Start/end date is modified on CR</inlineHelpText>
        <label>Del existing CA if any in job duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Discount_Reason__c</fullName>
        <label>Discount Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Division__c</fullName>
        <formula>TEXT (TR1__Job__r.TR1__Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__End_Assignment_Comments__c</fullName>
        <label>End Assignment Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__End_Assignment_Reason__c</fullName>
        <label>End Assignment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment Ended</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Acc:11/16: WO-008895--Created for Auto populating Expense Approver with CR Expense Approver.</description>
        <label>Expense Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports (Expense Approver)</relationshipLabel>
        <relationshipName>Closes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Fee_Amount__c</fullName>
        <formula>TR1__Salary__c *  TR1__Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Fee_Percentage__c</fullName>
        <label>Fee Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Generate_Timesheet__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Hiring_manger_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Hiring_Manager__r.Email</formula>
        <label>Hiring Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Internal_Billing_Notes__c</fullName>
        <label>Internal Billing Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_GP_Amount__c</fullName>
        <formula>TR1__Adjusted_Fee_Amount__c *  TR1__Job_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Percentage__c</fullName>
        <label>Job Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Closing Reports</relationshipLabel>
        <relationshipName>Closing_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>Closes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_GP_Amount__c</fullName>
        <formula>TR1__Adjusted_Fee_Amount__c *  TR1__Marketing_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Marketing_Percentage__c</fullName>
        <label>Marketing Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Markup__c</fullName>
        <formula>TR1__Adjusted_Bill_Rate__c /  TR1__Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Markup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__OT_Bill_Rate_Multiplier_Percentage__c</fullName>
        <defaultValue>1.50</defaultValue>
        <label>OT Bill Rate Multiplier Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__OT_Bill_Rate__c</fullName>
        <formula>TR1__Adjusted_Bill_Rate__c  *  TR1__OT_Bill_Rate_Multiplier_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OT Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__OT_Pay_Rate__c</fullName>
        <formula>TR1__Pay_Rate__c  * 1.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OT Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other2 Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_GP_Amount__c</fullName>
        <formula>TR1__Adjusted_Fee_Amount__c *  TR1__Other2_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other2 GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other2_Percentage__c</fullName>
        <label>Other2 Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Closes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Other_GP_Amount__c</fullName>
        <formula>TR1__Adjusted_Fee_Amount__c * TR1__Other_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Other_Percentage__c</fullName>
        <label>Other Percentage</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__PO_Number__c</fullName>
        <label>PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__PTO_Eligible__c</fullName>
        <label>PTO Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Pay_Type__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due On Receipt</fullName>
                </value>
                <value>
                    <fullName>Net 10 from Start Date</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 15 from Start Date</fullName>
                </value>
                <value>
                    <fullName>Net 20</fullName>
                </value>
                <value>
                    <fullName>Net 20 from Start Date</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 30 from Start Date</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 45 from Start Date</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 60 from Start Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Payroll_Type__c</fullName>
        <label>Payroll Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W2 - Exempt</fullName>
                </value>
                <value>
                    <fullName>W2 - Non Exempt</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed_First_Name__c</fullName>
        <formula>TR1__Person_Placed__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person Placed First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Person_Placed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Placed</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Always require a value in this field in order to save a record.</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Person_Placed__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports</relationshipLabel>
        <relationshipName>Closes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Rate_Change_Effective_Date__c</fullName>
        <label>Rate Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Rates_From_Job__c</fullName>
        <label>Rates From Job?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Receive_Timesheet_Email_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Timesheet Email Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Candidate_GP_Amount__c</fullName>
        <formula>TR1__Retained_Invoice_Amount__c *  TR1__Candidate_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Candidate GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Fee_Amount__c</fullName>
        <formula>(TR1__Salary__c + TR1__Additional_Compensation__c) * TR1__Fee_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Invoice_Amount__c</fullName>
        <label>Retained Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Job_GP_Amount__c</fullName>
        <formula>TR1__Retained_Invoice_Amount__c *  TR1__Job_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Job GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Marketing_GP_Amount__c</fullName>
        <formula>TR1__Retained_Invoice_Amount__c*TR1__Marketing_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Marketing GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Other2_GP_Amount__c</fullName>
        <formula>TR1__Retained_Invoice_Amount__c *  TR1__Other2_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Other2 GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retained_Other_GP_Amount__c</fullName>
        <formula>TR1__Retained_Invoice_Amount__c *  TR1__Other_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retained Other GP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Retainer_Close__c</fullName>
        <label>Retainer Close</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__SC_Duration__c</fullName>
        <defaultValue>$Setup.TR1__Executive_Search__c.TR1__Successful_Candidate_Default_Duration__c</defaultValue>
        <description>The duration of the Successful Candidate Off Limit Policy in days.</description>
        <inlineHelpText>The duration of the Successful Candidate Off Limit Policy in days.</inlineHelpText>
        <label>Off Limits Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__SC_Extend_to_Job_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retain the Successful Candidate Off Limit badge based on the Job&apos;s Account hierarchy.</description>
        <inlineHelpText>Retain the Successful Candidate Off Limit badge based on the Job&apos;s Account hierarchy.</inlineHelpText>
        <label>Extend to Job&apos;s Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SC_Include_Billing_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retain the Successful Candidate Off Limit badge based on the Billing Account hierarchy.</description>
        <inlineHelpText>Retain the Successful Candidate Off Limit badge based on the Billing Account hierarchy.</inlineHelpText>
        <label>Include Billing Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__SC_Withheld__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Postpones the creation of the Successful Candidate Off Limit Policy.</description>
        <inlineHelpText>Postpones the creation of the Successful Candidate Off Limit Policy.</inlineHelpText>
        <label>Withheld</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Salaried__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked the user gets the salary/day timesheet, if this is not checked they get the hourly.</description>
        <label>Daily Rate Timesheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Shift_Multiple__c</fullName>
        <inlineHelpText>If Pay and Charge = Full Day/AM/PM, then Enter &quot;1&quot;
If Pay and Charge = Hourly, then Enter the Number of Estimated Hours Per Day, ie &quot;8&quot;</inlineHelpText>
        <label>Shift Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Source_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lookup field that displays the Job from which the Application has been created (using &quot;Apply to Other Job&quot;)</description>
        <inlineHelpText>The Lookup field that displays the Job from which the Application has been created (using &quot;Apply to Other Job&quot;)</inlineHelpText>
        <label>Source Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Closing Reports (Source Job)</relationshipLabel>
        <relationshipName>Closing_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <description>The field is used to track the AppV2 source (USAM, internal etc.)</description>
        <inlineHelpText>The field is used to track the AppV2 source (USAM, internal etc.)</inlineHelpText>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Job Board</fullName>
                </value>
                <value>
                    <fullName>USAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Approver</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Timesheet_Approver__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports (Timesheet Approver)</relationshipLabel>
        <relationshipName>Closes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Copy__c</fullName>
        <label>Timesheet Copy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Frequency__c</fullName>
        <label>Timesheet Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Second_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Second Approver</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Timesheet_Second_Approver__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports (Timesheet Second Approver)</relationshipLabel>
        <relationshipName>SecondApproverCR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet_Type__c</fullName>
        <label>Timesheet Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Total_Days_Worked__c</fullName>
        <label>Total Days Worked</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Hours_Worked__c</fullName>
        <label>Total Hours Worked</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Percentage__c</fullName>
        <formula>TR1__Job_Percentage__c +  TR1__Candidate_Percentage__c +  TR1__Marketing_Percentage__c +  TR1__Other_Percentage__c +  TR1__Other2_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>